<?xml version="1.0"?>
<package>
  <name>psp_semseg_ros</name>
  <version>0.1.0</version>
  <description>The PSPNet Semantic Seg for ROS</description>

  <maintainer email="champollionn@gmail.com">Skywalker</maintainer>

  <license>MIT</license>

  <url type="website">https://hszhao.github.io/projects/pspnet/</url>

  <author email="champollionn@gmail.com">Skywalker</author>
  <author>3DWillow</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>vision_opencv</run_depend>
</package>
